Try a fix for damag block going under navigatinon on mobile

--- a/damage-calc/src/styles.scss
+++ b/damage-calc/src/styles.scss
@@ -1186,7 +1186,9 @@ html, body {
     }
   }
 
-  height: 100%;
+  height: 100dvh;
+  width: 100dvw;
+  position: relative;
 }
 
 body { 
